--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "mockingoose": "^2.16.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
@@ -49,6 +50,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
+    "supertest": "^7.0.0",
     "typescript": "~5.3.3"
   },
   "private": true
